# wd14-tagger-standalone

./: .gitignore  Dockerfile.cpu  Makefile  pyproject.toml  run.py
scripts/: fetch-hf-assets.sh
tagger/: cli.py  interrogators.py  model_assets.py
tagger/interrogator/: waifudiffusioninterrogator.py
tests/: test_cli.py  test_model_assets.py  test_repo_layout.py
