[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wd14-tagger-standalone"
version = "0.1.0"
description = "Standalone WD14 tagger with an agent-friendly CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=1.0.0",
  "onnxruntime>=1.23.2",
  "pandas>=2.3.3",
  "pillow>=12.0.0",
]

[project.scripts]
wd14-tagger = "tagger.cli:main_entry"

[tool.setuptools]
packages = ["tagger", "tagger.interrogator"]
